k8s/bonus-go-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service-go
  namespace: lab09
  labels:
    app.kubernetes.io/name: devops-info-service-go
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: devops-core-course
spec:
  selector:
    app.kubernetes.io/name: devops-info-service-go
    app.kubernetes.io/component: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
